--- a/app/src/main/res/layout/list_wine_item.xml
+++ b/app/src/main/res/layout/list_wine_item.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_pertanyaan"
     android:layout_width="match_parent"
     android:layout_height="96dp"
-    android:layout_marginTop="12dp"
     android:layout_marginLeft="16dp"
+    android:layout_marginTop="12dp"
     android:layout_marginRight="16dp"
-    android:id="@+id/card_pertanyaan"
-    card_view:cardBackgroundColor="#FFFF"
-    card_view:cardCornerRadius="8dp"
-    card_view:contentPadding="10dp"
+    android:clickable="true"
     android:foreground="?selectableItemBackground"
-    android:clickable="true">
+    card_view:cardBackgroundColor="#FFFF"
+    card_view:cardCornerRadius="14dp"
+    card_view:cardElevation="16dp"
+    card_view:contentPadding="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -46,7 +46,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Colour"
-            android:textColor="#000000"
+            android:textColor="#660477"
             android:textSize="12sp"
             card_view:layout_constraintStart_toEndOf="@+id/imageView_wine"
             card_view:layout_constraintTop_toBottomOf="@+id/text_name" />
@@ -55,12 +55,14 @@
             android:id="@+id/textprice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="8dp"
             android:text="Price"
-            android:textColor="#000000"
+            android:textColor="#F3A809"
             android:textSize="14sp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            card_view:layout_constraintHorizontal_bias="0.773"
+            card_view:layout_constraintStart_toEndOf="@+id/text_colour"
+            card_view:layout_constraintTop_toBottomOf="@+id/text_name"
+            card_view:layout_constraintVertical_bias="0.294" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
