--- a/app/src/main/res/layout/fragment_wine.xml
+++ b/app/src/main/res/layout/fragment_wine.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_700"
-    tools:context=".fragment.WineFragment">
+    tools:context=".fragment.winemain.WineMianFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
