--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,7 +7,7 @@
     tools:context=".fragment.winedetail.WineDetailFragment">
 
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_detail"
         app:cardElevation="6dp"
         app:cardCornerRadius="10dp"
@@ -22,7 +22,7 @@
             android:id="@+id/image_thumbs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
     <TextView
         android:id="@+id/text_instruction"
