--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pec">#B6FF2298</color>
+
+    <color name="boxSrokeColor">#009688</color>
+
 </resources>
