--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragment.winedetail.WineDetailFragment">
+    tools:context=".ui.fragment.winedetailNonAcoholic.WineDetailFragment">
 
 
     <com.google.android.material.card.MaterialCardView
