--- a/app/src/main/res/layout/fragment_real_wine.xml
+++ b/app/src/main/res/layout/fragment_real_wine.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.ingredient.IngredientFragment">
+    tools:context=".ui.fragment.realwine.RealWineFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
