--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,24 +3,51 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/wineFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/wineFragment"
-        android:name="com.peculiaruc.wineshop.ui.fragment.winemain.WineMianFragment"
+        android:name="com.peculiaruc.wineshop.ui.fragment.wineNonAcoholic.WineMainFragment"
         android:label="fragment_wine"
         tools:layout="@layout/fragment_wine" >
-        <action
-            android:id="@+id/action_wineFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
+
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.peculiaruc.wineshop.ui.fragment.winedetail.WineDetailFragment"
+        android:name="com.peculiaruc.wineshop.ui.fragment.winedetailNonAcoholic.WineDetailFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" >
         <argument
             android:name="id"
             app:argType="string" />
+    </fragment>
+    <activity
+        android:id="@+id/splashScreen"
+        android:name="com.peculiaruc.wineshop.ui.activities.SplashScreen"
+        android:label="activity_splash_screen"
+        tools:layout="@layout/activity_splash_screen" />
+    <fragment
+        android:id="@+id/wineAlcoholicFragment"
+        android:name="com.peculiaruc.wineshop.ui.fragment.wineAcoholic.WineAlcoholicFragment"
+        android:label="fragment_wine_alcoholic"
+        tools:layout="@layout/fragment_wine_alcoholic" />
+    <activity
+        android:id="@+id/logInActivity"
+        android:name="com.peculiaruc.wineshop.ui.activities.LogInActivity"
+        android:label="activity_log_in"
+        tools:layout="@layout/activity_log_in" />
+    <activity
+        android:id="@+id/signUpActivity"
+        android:name="com.peculiaruc.wineshop.ui.activities.SignUpActivity"
+        android:label="activity_sign_up"
+        tools:layout="@layout/activity_sign_up" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.peculiaruc.wineshop.ui.fragment.home.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
     </fragment>
 </navigation>
