--- a/app/src/main/res/layout/list_realwine_item.xml
+++ b/app/src/main/res/layout/list_realwine_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_pertanyaan"
+    android:id="@+id/card_realwine"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_marginLeft="16dp"
@@ -43,4 +44,5 @@
             card_view:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </com.google.android.material.card.MaterialCardView>
