--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,7 +30,11 @@
         android:id="@+id/wineAlcoholicFragment"
         android:name="com.peculiaruc.wineshop.ui.fragment.wineAcoholic.WineAlcoholicFragment"
         android:label="fragment_wine_alcoholic"
-        tools:layout="@layout/fragment_wine_alcoholic" />
+        tools:layout="@layout/fragment_wine_alcoholic" >
+        <action
+            android:id="@+id/action_wineAlcoholicFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
     <activity
         android:id="@+id/logInActivity"
         android:name="com.peculiaruc.wineshop.ui.activities.LogInActivity"
@@ -48,6 +52,15 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/realWineFragment"
+        android:name="com.peculiaruc.wineshop.ui.fragment.realwine.RealWineFragment"
+        android:label="fragment_real_wine"
+        tools:layout="@layout/fragment_real_wine" >
+        <action
+            android:id="@+id/action_realWineFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
     </fragment>
 </navigation>
