--- a/app/src/main/res/layout/fragment_wine_alcoholic.xml
+++ b/app/src/main/res/layout/fragment_wine_alcoholic.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/teal_700"
+    android:background="@color/pec"
     tools:context=".ui.fragment.wineAcoholic.WineAlcoholicFragment">
 
     <androidx.recyclerview.widget.RecyclerView
